objects/UserActivity__c.object
<CustomObject>
    <fields>
        <fullName>ActiveDays__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <description>Date and Time filed - specifically used for Log in and Log out of Cisco calls</description>
        <inlineHelpText>Date and Time filed - specifically used for Log in and Log out of Cisco calls</inlineHelpText>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerChannelFormula__c</fullName>
        <formula>User__r.PrimaryChannel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Channel Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>Sub Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supervisor</description>
        <inlineHelpText>Supervisor</inlineHelpText>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserActivityId__c</fullName>
        <description>User Activity Id</description>
        <externalId>true</externalId>
        <label>User Activity Id</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User</description>
        <inlineHelpText>User</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Activity</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>User Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ActiveDays__c</columns>
        <columns>Source__c</columns>
        <columns>Type__c</columns>
        <columns>Count__c</columns>
        <columns>Date__c</columns>
        <columns>Duration__c</columns>
        <columns>User__c</columns>
        <columns>OwnerChannelFormula__c</columns>
        <columns>SubType__c</columns>
        <columns>Supervisor__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllTOMASUser</fullName>
        <columns>NAME</columns>
        <columns>ActiveDays__c</columns>
        <columns>Source__c</columns>
        <columns>Type__c</columns>
        <columns>Count__c</columns>
        <columns>Date__c</columns>
        <columns>Duration__c</columns>
        <columns>User__c</columns>
        <columns>OwnerChannelFormula__c</columns>
        <columns>SubType__c</columns>
        <columns>Supervisor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>TIME OFF MANAGER</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>All TOM AS User</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CISCO</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Count__c</columns>
        <columns>Date__c</columns>
        <columns>DateTime__c</columns>
        <columns>Duration__c</columns>
        <columns>Source__c</columns>
        <columns>SubType__c</columns>
        <columns>Supervisor__c</columns>
        <columns>Type__c</columns>
        <columns>UserActivityId__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>CISCO</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/13/2016</value>
        </filters>
        <label>CISCO</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TOM</fullName>
        <columns>NAME</columns>
        <columns>ActiveDays__c</columns>
        <columns>Source__c</columns>
        <columns>Type__c</columns>
        <columns>Count__c</columns>
        <columns>Date__c</columns>
        <columns>Duration__c</columns>
        <columns>User__c</columns>
        <columns>OwnerChannelFormula__c</columns>
        <columns>SubType__c</columns>
        <columns>Supervisor__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>TIME OFF MANAGER</value>
        </filters>
        <label>Time off Manager 10 9 15</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
</CustomObject>